Mise à jour au niveau des couches projet
+ Achèvement de la création de la couche entity.
+ Création des classes de base pour couches persistence, presentation et service

--- a/UpfLineQuizPersistenceLayer/pom.xml
+++ b/UpfLineQuizPersistenceLayer/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.7.RELEASE</version>
+		<version>2.4.1</version>
 		<relativePath/>
 	</parent>
 	
@@ -22,7 +22,7 @@
 	</properties>
 
 	<dependencies>
-	
+		
 		<!-- ============= -->
 		<!-- SQL Connector -->
 		<!-- ============= -->
@@ -32,6 +32,7 @@
 		    <artifactId>mysql-connector-java</artifactId>
 		    <scope>runtime</scope>
 		</dependency>
+
 
 		<!-- ===================== -->
 		<!-- Spring Boot Framework -->
@@ -47,6 +48,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 		
 		<!-- =========== -->
 		<!-- Embedded DB -->
