--- a/UpfLineQuizEntityLayer/pom.xml
+++ b/UpfLineQuizEntityLayer/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.7.RELEASE</version>
+		<version>2.4.1</version>
 		<relativePath/>
 	</parent>
 	
@@ -18,7 +18,7 @@
 	<description> ... </description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>11</java.version> <!-- 1.8 | 11 -->
 	</properties>
 
 	<dependencies>
@@ -32,17 +32,7 @@
 	      <artifactId>lombok</artifactId>
 	      <optional>true</optional>
 	    </dependency>
-  
-  		<!-- ============= -->
-		<!-- SQL Connector -->
-		<!-- ============= -->
-
-		<dependency>
-		    <groupId>mysql</groupId>
-		    <artifactId>mysql-connector-java</artifactId>
-		    <scope>runtime</scope>
-		</dependency>
-  
+	    
   
   		<!-- ===================== -->
 		<!-- Spring Boot Framework -->
@@ -56,11 +46,6 @@
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		
-				<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
 		<dependency>
