--- a/UpfLineQuizPersistenceLayer/src/main/resources/application.properties
+++ b/UpfLineQuizPersistenceLayer/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # Read more : https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html#common-application-properties-json
 
-server.port=8086
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+
 spring.datasource.url=jdbc:mysql://localhost:3308/upflinequizdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-
+server.port=8086
