--- a/UpfLineQuizPesentationLayer/pom.xml
+++ b/UpfLineQuizPesentationLayer/pom.xml
@@ -6,13 +6,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.7.RELEASE</version>
+		<version>2.4.1</version>
 		<relativePath/>
 	</parent>
 	
 	<groupId>ma.ac.upf.linequiz</groupId>
 	<artifactId>UpfLineQuizPesentationLayer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
 	<name>UpfLineQuizPesentationLayer</name>
 	<description>...</description>
 
@@ -20,17 +21,35 @@
 		<java.version>11</java.version>
 	</properties>
 
+	<!-- ===================== -->
+	<!-- Spring Boot Framework -->
+	<!-- ===================== -->
+		
 	<dependencies>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
 		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-web</artifactId>
+		</dependency>	
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- Inject object code to HTML code -->
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
