--- a/UpfLineQuizServiceLayer/pom.xml
+++ b/UpfLineQuizServiceLayer/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.7.RELEASE</version>
+		<version>2.4.1</version>
 		<relativePath/>
 	</parent>
 	
@@ -14,6 +14,10 @@
 	<artifactId>UpfLineQuizServiceLayer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	
+	<!-- 
+	<url>http://www.example.com</url>
+	 -->
+	 
 	<name>UpfLineQuizServiceLayer</name>
 	<description>...</description>
 
@@ -22,6 +26,22 @@
 	</properties>
 
 	<dependencies>
+	
+		<!-- ===================================== -->
+		<!-- Devtools (auto recompile in save ...) -->
+		<!-- Not: Remouve it befor deploiment -->
+		<!-- ===================================== -->
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+		
+
+		<!-- ===================== -->
+		<!-- Spring Boot Framework -->
+		<!-- ===================== -->
+				
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -32,6 +52,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 	</dependencies>
 
 	<build>
