--- a/UpfLineQuizPersistenceLayer/pom.xml
+++ b/UpfLineQuizPersistenceLayer/pom.xml
@@ -18,6 +18,8 @@
 	<description>...</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>11</java.version>	<!-- 1.8 | 11 -->
 	</properties>
 
@@ -49,17 +51,22 @@
 		<!-- ==================== -->
 		<!-- Faker data generator | Documentation : https://github.com/DiUS/java-faker -->
 		<!-- ==================== -->
-
+<!--
 		<dependency>
 		    <groupId>com.github.javafaker</groupId>
 		    <artifactId>javafaker</artifactId>
 		    <version>1.0.2</version>
 		</dependency>
-
+-->
 
 		<!-- ===================== -->
 		<!-- Spring Boot Framework -->
 		<!-- ===================== -->
+
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter</artifactId>
+		</dependency> 
 
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
@@ -90,7 +97,7 @@
 			<scope>runtime</scope>
 		</dependency>
 		-->
-		
+
 	</dependencies>
 
 	<build>
@@ -98,6 +105,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
