--- a/UpfLineQuizPersistenceLayer/src/main/resources/application.properties
+++ b/UpfLineQuizPersistenceLayer/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-# Read more : https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html#common-application-properties-json
+# DB connection config, Read more : https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html#common-application-properties-json
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database=mysql
 spring.jpa.show-sql=false
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.platform=mysql
 spring.datasource.url=jdbc:mysql://localhost:3308/upflinequizdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
