--- a/UpfLineQuizPersistenceLayer/src/main/resources/application.properties
+++ b/UpfLineQuizPersistenceLayer/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # DB connection config, Read more : https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html#common-application-properties-json
 
+#debug = true
+
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
