--- a/UpfLineQuizServiceLayer/src/main/resources/application.yml
+++ b/UpfLineQuizServiceLayer/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 # DB connection config, Read more : https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html#common-application-properties-json
 
+#debug: true
+
 spring:
   jpa:
+    open-in-view: false
     database: mysql
     show-sql: false
     properties:
